# capacidad-acceso

./: .gitignore  CONTEXT_REE_Demand_Access_Capacity.md  Diagrama_Lectura_Excel_Paso_a_Paso.mermaid  README.md  pyproject.toml
.streamlit/: config.toml
data/raw/: 2026_02_20_GRT_demanda.csv
src/capacidad/: __init__.py  analysis.py  cli.py  dashboard.py  download.py  export.py  models.py  parser.py
tests/: conftest.py  test_parser.py
