[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capacidad"
version = "0.1.0"
description = "REE demand access capacity parser and analyzer for Spain's transmission grid"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "typer[all]>=0.9",
    "requests>=2.28",
    "pyarrow>=14.0",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
capacidad = "capacidad.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/capacidad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
